fix: Horizontal scroll bar no longer appears on Home

--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -4,3 +4,8 @@
   /* align-items: center; */
   display: flex;
 }
+
+html {
+  max-width: 100%;
+  overflow-x: hidden;
+}
